Bug 1445503 - Use MIN instead of unnecessary CLAMP r=karlt CLAMP is unnecessary as the minimum acceptable value is 0, and progressPercent is unsigned. CLAMP can trigger the following warning/error in some builds: error: comparison of unsigned expression < 0 is always false [-Werror=type-limits]